--- a/Info.html
+++ b/Info.html
@@ -7,7 +7,7 @@
 <a id="Info" href="Info.html">Info</a>
 <a id="Personal" href="Personal.html">Personal</a>
 <hr>
-<P>Hi this is Alex Wolfenden</P>
+<P>Hi this is Alex Wolfenden. I'm part of a family of four with my mother coming from Sweden, my father from England, and me and my sister being born in the US.</P>
 <br>
 <br>
 <br>
